atlassian-frontend/build/ci/build-pipeline/__fixtures__/project-with-errors/packages/a-team/invalid-declarations/non-src/index.ts
export const nonSrc = 'non-src';
